# omop-pipeline

./: .gitignore  README.md  bigquery_query.sql  main.py  pyproject.toml
terraform-omop-bucket/: .terraform.lock.hcl  bigquery.tf  fivetran.tf  iam.tf  main.tf  outputs.tf  s3-resources.tf  variables.tf
utils/: download_gsla_zarr_to_parquet.py  omop_bigquery_to_s3.py  transfer_data_gcp_to_s3.py  validate_with_greatexpectations.py
